Fix alignment on filter row

--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -14,6 +14,7 @@
         background: $gray-200;
         th {
           border-bottom: none;
+          vertical-align: top;
           padding: {
             top: 1rem;
             bottom: 1rem;
